err/md2ebook.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/Markdown-2.6.11.dist-info'...
Listing './lib/python3.5/site-packages/Unidecode-1.0.22.dist-info'...
Listing './lib/python3.5/site-packages/ansicolors-1.1.8.dist-info'...
Listing './lib/python3.5/site-packages/colors'...
Listing './lib/python3.5/site-packages/docopt-0.6.2.egg-info'...
Listing './lib/python3.5/site-packages/markdown'...
Listing './lib/python3.5/site-packages/markdown/extensions'...
Listing './lib/python3.5/site-packages/md2ebook'...
Compiling './lib/python3.5/site-packages/md2ebook/checkers.py'...
***   File "./lib/python3.5/site-packages/md2ebook/checkers.py", line 10
    print warning("Warning: missing epubcheck. You'll be able to run"
                ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/md2ebook/commander.py'...
***   File "./lib/python3.5/site-packages/md2ebook/commander.py", line 99
    print warning(
                ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/md2ebook/generators.py'...
***   File "./lib/python3.5/site-packages/md2ebook/generators.py", line 104
    print error('The designated cover (%s) does not exists.'
              ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/md2ebook-0.1.1.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/shell-1.0.1.dist-info'...
Listing './lib/python3.5/site-packages/unidecode'...
Listing './share'...
Listing './share/python-wheels'...
